# BitDB

./: .gitignore  .project  AuditTask.h  AuditTaskList.cpp  AuditTaskList.h  AuditTaskMonitor.cpp  AuditTaskMonitor.h  AuditTaskQueue.cpp  AuditTaskQueue.h  AuditTaskServer.cpp  AuditTaskServer.h  Bitcask.cpp  Bitcask.h  CMakeLists.txt  Config.cpp  Config.h  HttpBitcaskService.cpp  HttpBitcaskService.h  HttpServer.cpp  HttpServer.h  KvJson.cpp  KvJson.h  Logger.cpp  Logger.h  Makefile  README.md  SysInfo.cpp  bitcask  config.json  config.json.rongpan  db  db.cpp  db.h  http_service.cpp  http_service.h  main.cpp  semaphore.h  test.db  test1.db  test2.db  (+3 more)
.history/: .gitignore_20230227155634  .gitignore_20240615102300  Binder_20230905095551.cpp  CMakeLists_20240812164340.txt  CMakeLists_20240910110356.txt  CMakeLists_20240910110401.txt  CMakeLists_20240910110420.txt  CMakeLists_20240910110421.txt  CMakeLists_20240910110422.txt  CMakeLists_20240910110423.txt  CMakeLists_20240910110427.txt  CMakeLists_20240910115522.txt  CMakeLists_20240910141212.txt  CMakeLists_20240910141222.txt  Makefile_20211203192432  Makefile_20211203192444  Makefile_20211203192453  Makefile_20211203192502  Statement_20230905102143.h  Statement_20230905150553.h  Statement_20230905150619.h  db_20211203165134.h  db_20211203192205.cpp  db_20211203192737.cpp  db_20211203192756.cpp  db_20211203192810.cpp  db_20211203192832.cpp  db_20211208113541.h  db_20211208113545.h  db_20211208173415.h  db_20211208173424.h  db_20211208173440.h  db_20211208173455.h  db_20211208175134.cpp  db_20211209170239.cpp  db_20211209175404.cpp  db_20211210094608.cpp  db_20211210101523.h  db_20211210101528.h  db_20211210101553.h  (+11 more)
.history/DB/: Statement_20230901171457.cpp  Statement_20230905151213.cpp
.history/Src/: CMakeLists_20240910101626.txt  CMakeLists_20240910101628.txt  CMakeLists_20240910101640.txt  CMakeLists_20240910101651.txt  CMakeLists_20240910101703.txt  CMakeLists_20240910112843.txt  CMakeLists_20240910112849.txt  CMakeLists_20240910112852.txt  CMakeLists_20240911165138.txt  CMakeLists_20240911165151.txt  CMakeLists_20240911165203.txt  CMakeLists_20240911165223.txt  CMakeLists_20240912144721.txt  CMakeLists_20240912144734.txt  CMakeLists_20240912150812.txt  CMakeLists_20240912150823.txt  CMakeLists_20240912152243.txt  CMakeLists_20240912152253.txt  (+42 more)
Docs/: README.md  search_fandb设计文档.md
Include/: get_spdlog.sh  httplib.h
Shell/: chineseStopWords.txt  cut_words.py  kill_tinc.sh  note_data.py  search_fandb.sql  test.sh
Src/: ClientAuthList.cpp  ClientAuthList.h  HttpServer.cpp  Logger.cpp  Main.cpp  semaphore.h.bak
Test/: .gdbinit  CMakeLists.txt
benchmark/: CMakeLists.txt
rspec/: basic_insert.rb
(+833 files in other folders)
